--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="4" data-paginate="true" data-theme="gaia" lang="C" data-marpit-pagination="4" style="--paginate:true;--theme:gaia;" data-marpit-pagination-total="18">
 <h2 id="arquitectura-b%C3%A1sica">Arquitectura básica</h2>
-<div style="display: flex; justify-content: center; align-items: center;">
-  <img src="assets/wasm.png" style="max-width: 70%;" />
-</div>
+<p><img src="assets/wasm.png" alt="height:90vh" /></p>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="5" data-paginate="true" data-theme="gaia" lang="C" data-marpit-pagination="5" style="--paginate:true;--theme:gaia;" data-marpit-pagination-total="18">
 <h2 id="ejemplo-en-webassembly-text-wat">Ejemplo en WebAssembly Text (WAT)</h2>
