deploy: 24ef39db11b9a02aff605b459c1fbb165dc34488

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="4" data-paginate="true" data-theme="gaia" lang="C" data-marpit-pagination="4" style="--paginate:true;--theme:gaia;" data-marpit-pagination-total="18">
 <h2 id="arquitectura-b%C3%A1sica">Arquitectura básica</h2>
-<img src="assets/wasm.png" style="max-height: 85vh; max-width: 100%;" />
+<p><img src="assets/wasm.png" alt="" /></p>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="5" data-paginate="true" data-theme="gaia" lang="C" data-marpit-pagination="5" style="--paginate:true;--theme:gaia;" data-marpit-pagination-total="18">
 <h2 id="ejemplo-en-webassembly-text-wat">Ejemplo en WebAssembly Text (WAT)</h2>
