--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 </ul>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="4" data-paginate="true" data-theme="gaia" lang="C" data-marpit-pagination="4" style="--paginate:true;--theme:gaia;" data-marpit-pagination-total="18">
+<p>layout: center</p>
 <h2 id="arquitectura-b%C3%A1sica">Arquitectura básica</h2>
 <p><img src="assets/wasm.png" alt="" /></p>
 </section>
