--- a/index.html
+++ b/index.html
@@ -34,8 +34,16 @@
 </ul>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="4" data-paginate="true" data-theme="gaia" lang="C" data-marpit-pagination="4" style="--paginate:true;--theme:gaia;" data-marpit-pagination-total="18">
+<h2 id="layout-center">layout: center</h2>
 <h2 id="arquitectura-b%C3%A1sica">Arquitectura básica</h2>
-<img src="assets/wasm.png" style="max-height: 85vh; max-width: 100%;" />
+<div style="display: flex; align-items: center; gap: 2rem;">
+  <img src="assets/wasm.png" style="max-height: 60vh; width: auto;" />
+  <div style="max-width: 40%;">
+    <p><strong>.wasm binary module:</strong> Código compilado a WebAssembly.</p>
+    <p><strong>JavaScript bridge:</strong> Interfaz que conecta el código WASM con la web.</p>
+    <p><strong>WebAssembly VM:</strong> Entorno de ejecución dentro del navegador.</p>
+  </div>
+</div>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="5" data-paginate="true" data-theme="gaia" lang="C" data-marpit-pagination="5" style="--paginate:true;--theme:gaia;" data-marpit-pagination-total="18">
 <h2 id="ejemplo-en-webassembly-text-wat">Ejemplo en WebAssembly Text (WAT)</h2>
