--- a/public/ejemplos/c_cpp/index.html
+++ b/public/ejemplos/c_cpp/index.html
@@ -1,1 +1,45 @@
-<!-- Ejemplo en C/C++ con WebAssembly -->
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <title>Ejemplo WASM - C: add(a, b)</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      padding: 2rem;
+    }
+    input {
+      width: 4rem;
+      margin-right: 0.5rem;
+    }
+  </style>
+</head>
+<body>
+  <h1>Ejecutando <code>add(a, b)</code> desde C en WebAssembly</h1>
+
+  <p>
+    <input id="a" type="number" value="2" /> +
+    <input id="b" type="number" value="3" />
+    <button onclick="sumar()">Calcular</button>
+  </p>
+  <p>Resultado: <span id="resultado">---</span></p>
+
+  <script src="add.js"></script>
+  <script>
+    let add;
+
+    Module.onRuntimeInitialized = () => {
+      // Vinculamos la función C
+      add = Module.cwrap('add', 'number', ['number', 'number']);
+      document.querySelector("button").disabled = false;
+    };
+
+    function sumar() {
+      const a = parseInt(document.getElementById('a').value);
+      const b = parseInt(document.getElementById('b').value);
+      const resultado = add(a, b);
+      document.getElementById('resultado').textContent = resultado;
+    }
+  </script>
+</body>
+</html>
